--- a/index.html
+++ b/index.html
@@ -7,39 +7,62 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<title>Азбука вкуса</title>
 </head>
 <body>
 	<div id="container" class="container">
 
-		<div class="row">
-			<div id="logo" class="col-xs-3">
+		<div class="row hidden-md hidden-sm hidden-xs">
+			<div id="logo" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<img src="images/logo.png">
 			</div>
-			<div id="main1" class="col-xs-4">
+			<div id="main1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<a href="#zag1">ВКУСНЫЕ ЦЕНЫ</a>
 			</div>
-			<div  id="main2" class="col-xs-3">
+			<div  id="main2" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<a href="#zag2">ВКУСНЫЕ ИДЕИ</a>
 			</div>
-			<div id="main3" class="col-xs-2">
+			<div id="main3" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
 				<a href="#contacts">КОНТАКТЫ</a>
 			</div>
 		</div>
-
+		<!--Navbar--> 
+		<nav style="height: 85px" class="navbar navbar-default">
+        	<div class="container-fluid">
+	        	<div class="navbar-header">
+			        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        </button>
+	      		<a class="navbar-brand" href="#"><img src="images/logo.png"></a>
+	    		</div>
+	    		<!-- Основная часть меню (может содержать ссылки, формы и другие элементы) -->
+	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <a id="m1" href="#zag1">ВКУСНЫЕ ЦЕНЫ</a>
+			      <a id="m2" href="#zag2">ВКУСНЫЕ ИДЕИ</a>
+			      <a id="m3" href="#contacts">КОНТАКТЫ</a>
+	    		</div>
+  			</div>
+		</nav>
+		<!--Navbar-->
+		<!--First images-->
 		<div class="row">
-			<div id="ap-1" class="col-xs-8">
+			<div id="ap-1" class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
 				<img src="images/ap-1.jpg">
 			</div>
-			<div id="ap-2" class="col-xs-4">
+			<div id="ap-2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 				<img src="images/ap-2.jpg">
 			</div>
 		</div>
+		<!--First images-->
 
 		<div id="zag1" >Вкусные цены</div>
 
 		<div id="rowtovar" class="row">
-			<div id="tovar1" class="col-xs-3">
+			<div id="tovar1" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<img src="images/bp-1.jpg">
 					<div id="naz1">
 						Морковь <br> «Просто Азбука» 
@@ -52,7 +75,7 @@
 						<b>-.58</b><font size="4">.50</font> 
 					</div>
 			</div>
-			<div id="tovar2" class="col-xs-3">
+			<div id="tovar2" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 				<img src="images/bp-2.jpg">
 					<div id="naz2">
 						Чипсы «Rocer’s»
@@ -65,7 +88,7 @@
 						<b>-.78</b><font size="4">.80</font> 
 					</div>
 			</div>
-			<div id="tovar3" class="col-xs-3">
+			<div id="tovar3" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 					<img src="images/bp-3.jpg">
 					<div id="naz3">
 						Томаты <br> «На ветке»
@@ -78,7 +101,7 @@
 						<b>-.65</b><font size="4">.00</font> 
 					</div>
 			</div>
-			<div id="tovar4" class="col-xs-3">
+			<div id="tovar4" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 					<img src="images/bp-4.jpg">
 					<div id="naz4">
 						Сыр<br>«Вьё Булонь»
@@ -98,19 +121,19 @@
 		</div>
 
 		<div class="row">
-              <div id="picture1" class="col-xs-6">
+              <div id="picture1" class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                  <div id="mask" class="mask">
                       Полуфабрикаты
                   </div>
               </div>
-              <div id="picture2" class="col-xs-6">
+              <div id="picture2" class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                  <div id="mask2" class="mask2">
                       Легкие десерты
                  </div>
               </div>
           </div>
           <div id="sred" class="row">
-              <div id="picture3" class="col-xs-12">
+              <div id="picture3" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                   <div id="mask3" class="mask3">
                       Наша продукция
                   </div>
@@ -120,15 +143,15 @@
 		<div id="contacts">
         	<div class="container">
          		<div class="row">
-            		<div class="col-xs-1"></div>
-            		<div class="col-xs-5">
+            		<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+            		<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                 		<b>Интернет-магазин:</b> прием заказа по телефону
                 		(с 9:00 до 21:00), вопросы организации
                 		доставки (круглосуточно)<br><br>
                 		<b>+7(495)223-02-00</b> <br><br>
                 		<img src="images/logo-f.png">
             		</div>
-            		<div class="col-xs-5">
+            		<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                 		По вопросам и замечаниям на качество
                 		обращайтесь в Службу клиентской поддержки<br>
                 		с 9:00 до 21:00 ежедневно<br><br>
@@ -137,14 +160,14 @@
                     	8 (800) 700-34-87</b><br><br>
                 		Офис с 9:00 до 18:00 по будням
             		</div>
-            		<div class="col-xs-1"></div>
+            		<div class="col-xs-1 col-sm-1 col-md-5 col-lg-1"></div>
          		</div>
         	</div>
     	</div>
 
 		<div class="container">
         	<div class="row">
-            	<div id="foot" class="col-xs-12">
+            	<div id="foot" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 	2017, Азбука Вкуса Все права защищены. Условия и соглашения Интернет-магазин продуктов Азбука Вкуса: продукты питания, хозтовары, сопутствующие товары. Доставка продуктов осуществляется в пределах Москвы и Московской области
             	</div>
         	</div>
