--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Азбука вкуса</title>
 </head>
 <body>
@@ -28,8 +23,18 @@
 				<a href="#contacts">КОНТАКТЫ</a>
 			</div>
 		</div>
-		<!--Navbar--> 
-		<nav style="height: 85px" class="navbar navbar-default">
+
+
+
+
+
+
+
+
+
+
+				<!--Navbar--> 
+		<nav style="height: 85px" class="navbar navbar-default" role="navigation">
         	<div class="container-fluid">
 	        	<div class="navbar-header">
 			        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -41,6 +46,7 @@
 	    		</div>
 	    		<!-- Основная часть меню (может содержать ссылки, формы и другие элементы) -->
 	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    		  <span class="sr-only">Toggle navigation</span>
 			      <a id="m1" href="#zag1">ВКУСНЫЕ ЦЕНЫ</a>
 			      <a id="m2" href="#zag2">ВКУСНЫЕ ИДЕИ</a>
 			      <a id="m3" href="#contacts">КОНТАКТЫ</a>
@@ -174,5 +180,8 @@
     	</div>
 
 	</div>
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/transition.min.js"></script>
 </body>
 </html>
