navbar update 2.0 centre

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Азбука вкуса</title>
 </head>
 <body>
-	<div id="container" class="container">
+	<div  class="container">
 
         <!-- Навигационное меню -->
 		<nav style="height: 85px" class="navbar navbar-default" role="navigation">
