--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div  class="container">
 
         <!-- Навигационное меню -->
-		<nav style="height: 85px" class="navbar navbar-default" role="navigation">
+		<nav class="navbar navbar-default navbar1" role="navigation">
         	<div class="container-fluid">
 	        	<div class="navbar-header">
 			        <button type="button" class="navbar-toggle collapsed burger" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" style="margin-top: 30px">
